# kubernetes-tests

./: .gitignore  README.md  pyproject.toml
docker/: run.py
docker/app/: aplicacao.py
kubernetes/: deployment.yaml
kubernetes/meupod/: configmap.yaml  deployment.yaml  job.yaml  meupod.yaml  service.yaml  statefulSet.yaml
