[tool.poetry]
name = "modulo3-igti-edc"
version = "0.1.0"
description = ""
authors = ["HemersonRafael <rafaelpontes1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
